fix navigation styles for dark mode

--- a/projects/components/styles/themes/_components/navigation.scss
+++ b/projects/components/styles/themes/_components/navigation.scss
@@ -84,8 +84,10 @@
   --emr-navigation-nested-item-hover-bg: none;
   --emr-navigation-nested-item-active-bg: none;
   --emr-navigation-item-color: theme('textColor.secondary.500');
+  --emr-navigation-item-active-color: theme('textColor.primary.DEFAULT');
   --emr-navigation-nested-item-color: theme('textColor.secondary.500');
   --emr-navigation-item-icon-color: theme('colors.secondary.600');
+  --emr-navigation-item-active-icon-color: theme('colors.primary.DEFAULT');
 }
 
 html.dark {
@@ -109,12 +111,15 @@ html.dark {
   .emr-navigation[data-theme="secondary"] {
     .emr-navigation-item.is-active {
       --emr-navigation-item-border-color: theme('colors.neutral.400');
+      --emr-navigation-item-active-color: theme('colors.primary.300');
     }
   }
 
   .emr-navigation[theme="simple"] {
     --emr-navigation-item-color: theme('textColor.neutral.500');
     --emr-navigation-nested-item-color: theme('textColor.neutral.500');
-    --emr-navigation-item-icon-color: theme('colors.neutral.300');
+    --emr-navigation-item-icon-color: theme('colors.neutral.400');
+    --emr-navigation-item-active-icon-color: theme('colors.primary.300');
+    --emr-navigation-item-active-color: theme('colors.primary.300');
   }
 }
